--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-echo "<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Home</title></head><body><h1>Welcome to Web App</h1></body></html>" > index.html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Home</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background-color: #f0f8ff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      margin-bottom: 20px;
+      color: #2c3e50;
+    }
+    a {
+      text-decoration: none;
+      background-color: #3498db;
+      color: white;
+      padding: 10px 20px;
+      margin: 5px;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+    a:hover {
+      background-color: #2980b9;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to Web App</h1>
+  <a href="admin.html">Admin Page</a>
+  <a href="user.html">User Page</a>
+  <a href="manager.html">Manager Page</a>
+</body>
+</html>
